# realtime-analytics-pipeline

./: .env.cloud.example  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: __init__.py
app/alerts/: console.py  dispatcher.py  slack.py
app/analytics/: anomaly_detector.py  kpi_calculator.py
app/api/: main.py  schemas.py
app/api/routes/: events.py  health.py  kpis.py
app/consumer/: processor.py
app/core/: config.py  exceptions.py  logging.py
app/events/: models.py  producer.py  validator.py
app/storage/: postgres.py  redis_cache.py
app/ui/: streamlit_app.py
scripts/: migrate.py  run_consumer.py  run_producer.py  start_api.sh
sql/migrations/: 001_init.sql
tests/: conftest.py  test_api.py  test_consumer.py  test_event_validation.py  test_kpi_calculations.py  test_producer.py
